--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <section id="co-to">
         <h2>Czym jest robotyka edukacyjna?</h2>
         <p>Robotyka edukacyjna to forma nauki, która łączy programowanie, fizykę i matematykę z praktycznym budowaniem robotów. Pozwala uczniom rozwijać logiczne myślenie oraz umiejętności techniczne.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Lego_Education_WeDo.jpg" alt="Robot LEGO WeDo używany w edukacji" class="img">
+<img src="images/images/WeDo.webp" alt="Robot LEGO WeDo używany w edukacji" class="img">
+<img src="images/images/i-lego-mindstorms-31313-ev3.webp" alt="Zestaw LEGO Mindstorms EV3" class="img">
+<img src="images/images/45678.jpg" alt="Zestaw LEGO Spike Prime" class="img">
+
     </section>
 
     <section id="zastosowania">
