--- a/index.html
+++ b/index.html
@@ -22,19 +22,31 @@
     <section id="co-to">
         <h2>Czym jest robotyka edukacyjna?</h2>
         <p>Robotyka edukacyjna to forma nauki, która łączy programowanie, fizykę i matematykę z praktycznym budowaniem robotów. Pozwala uczniom rozwijać logiczne myślenie oraz umiejętności techniczne.</p>
-<img src="images/images/WeDo.webp" alt="Robot LEGO WeDo używany w edukacji" class="img">
-<img src="images/images/i-lego-mindstorms-31313-ev3.webp" alt="Zestaw LEGO Mindstorms EV3" class="img">
-<img src="images/images/45678.jpg" alt="Zestaw LEGO Spike Prime" class="img">
+<section id="co-to">
+    <h2>Czym jest robotyka edukacyjna?</h2>
+    <p>Robotyka edukacyjna to forma nauki, która łączy programowanie, fizykę i matematykę z praktycznym budowaniem robotów. Pozwala uczniom rozwijać logiczne myślenie oraz umiejętności techniczne.</p>
 
-    </section>
+    <!-- Zdjęcie LEGO WeDo -->
+    <img src="images/images/WeDo.webp" alt="Robot LEGO WeDo używany w edukacji" class="img">
+</section>
+<section id="zastosowania">
+    <h2>Zastosowania w szkołach</h2>
 
-    <section id="zastosowania">
-        <h2>Zastosowania w szkołach</h2>
-        <ul>
-            <li>Zajęcia z LEGO Education</li>
-            <li>Łączenie robotyki z matematyką</li>
-            <li>Wprowadzenie do programowania</li>
-        </ul>
+    <ul>
+        <li>Zajęcia z LEGO Education</li>
+        <li>Łączenie robotyki z matematyką</li>
+        <li>Wprowadzenie do programowania</li>
+    </ul>
+
+    <h3>Zestaw LEGO Mindstorms</h3>
+    <img src="images/images/i-lego-mindstorms-31313-ev3.webp" alt="Zestaw LEGO Mindstorms EV3" class="img">
+
+    <h3>Zestaw LEGO Spike Prime</h3>
+    <img src="images/images/45678.jpg" alt="Zestaw LEGO Spike Prime" class="img">
+</section>
+
+
+   
 
         <h3>Dlaczego robotyka pomaga?</h3>
         <ol>
