--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         </nav>
     </header>
 
-    <section id="co-to">
+   <section id="co-to">
+    <h2>Czym jest robotyka edukacyjna?</h2>
+    <p>Robotyka edukacyjna to forma nauki, która łączy programowanie, fizykę i matematykę z praktycznym budowaniem robotów. Pozwala uczniom rozwijać logiczne myślenie oraz umiejętności techniczne.</p>
+
+    <img src="images/images/WeDo.webp" alt="Robot LEGO WeDo używany w edukacji" class="img">
+</section>
+
         <h2>Czym jest robotyka edukacyjna?</h2>
         <p>Robotyka edukacyjna to forma nauki, która łączy programowanie, fizykę i matematykę z praktycznym budowaniem robotów. Pozwala uczniom rozwijać logiczne myślenie oraz umiejętności techniczne.</p>
 <section id="co-to">
